--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -28,3 +28,8 @@ li {
     float: left !important;
     padding-left: 20px !important;
 } */
+
+.imgCabania{
+    width: 500px;
+    height: 300px;
+}
